--- a/tests/dune
+++ b/tests/dune
@@ -7,3 +7,8 @@
  (name lextests)
  (libraries core ounit2 lex)
  (modules lextests))
+
+(test
+ (name parsetests)
+ (libraries core ounit2 parse lex ast)
+ (modules parsetests))
