--- a/src/dune
+++ b/src/dune
@@ -8,7 +8,9 @@
 (library
  (name lex)
  (modules lex)
- (libraries core))
+ (libraries core)
+ (preprocess
+  (pps ppx_jane)))
 
 (library
  (name parse)
