--- a/dune
+++ b/dune
@@ -2,6 +2,7 @@
  (target submission.zip)
  (deps
   (source_tree src)
-  (source_tree tests))
+  (source_tree tests)
+  README.md)
  (action
   (run zip -r submission.zip %{deps})))
