--- a/src/dune
+++ b/src/dune
@@ -22,7 +22,9 @@
 (library
  (name codegen)
  (modules codegen)
- (libraries core ast))
+ (libraries core ast)
+ (preprocess
+  (pps ppx_jane bisect_ppx)))
 
 (executable
  (name convert)
