type inference tests, import tests, comments

--- a/src/dune
+++ b/src/dune
@@ -10,7 +10,7 @@
  (modules lex)
  (libraries core)
  (preprocess
-  (pps ppx_jane)))
+  (pps ppx_jane bisect_ppx)))
 
 (library
  (name parse)
@@ -25,13 +25,6 @@
  (libraries core ast)
  (preprocess
   (pps ppx_jane bisect_ppx)))
-
-; (library
-;  (name convert)
-;  (modules convert)
-;  (libraries core core_kernel core_unix.command_unix ast lex parse codegen)
-;  (preprocess
-;   (pps ppx_let ppx_jane bisect_ppx)))
 
 (executable
  (name convert)
