--- a/src/dune
+++ b/src/dune
@@ -22,16 +22,16 @@
 (library
  (name codegen)
  (modules codegen)
- (libraries core ast)
+ (libraries core ast codegenutil)
  (preprocess
   (pps ppx_jane bisect_ppx)))
 
-; (library
-;  (name convert)
-;  (modules convert)
-;  (libraries core core_kernel core_unix.command_unix ast lex parse codegen)
-;  (preprocess
-;   (pps ppx_let ppx_jane bisect_ppx)))
+(library
+ (name codegenutil)
+ (modules CodegenUtil)
+ (libraries core ast)
+ (preprocess
+  (pps ppx_jane bisect_ppx)))
 
 (executable
  (name convert)
