added signifigant changes to formatting, and included end to end testing

--- a/tests/dune
+++ b/tests/dune
@@ -17,3 +17,8 @@
  (name codegenTests)
  (libraries core ounit2 codegen)
  (modules codegenTests))
+
+(test
+ (name endtoendtests)
+ (libraries core ounit2 codegen parse lex ast)
+ (modules endtoendtests))
